// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RN theme output > rnDarkTheme matches snapshot 1`] = `
{
  "colorAccentDefault": "#4ab8e8",
  "colorAccentOnAccent": "#07080e",
  "colorBorderStrong": "rgba(255,255,255,0.12)",
  "colorBorderSubtle": "rgba(255,255,255,0.065)",
  "colorHeroBgEnd": "#07080e",
  "colorHeroBgStart": "#101e30",
  "colorHeroSparkline": "rgba(74,184,232,0.7)",
  "colorHeroTopAccent": "#4ab8e8",
  "colorIncomeDefault": "#8898c8",
  "colorStatusDanger": "#c04848",
  "colorStatusSuccess": "#4aa870",
  "colorStatusWarning": "#c98c38",
  "colorSurfaceBase": "#07080e",
  "colorSurfaceMid": "#12131e",
  "colorSurfaceOverlay": "#181928",
  "colorSurfaceRaised": "#0c0d16",
  "colorTextMuted": "rgba(230,224,216,0.28)",
  "colorTextPrimary": "#e6e0d8",
  "colorTextSecondary": "rgba(230,224,216,0.52)",
  "fontFamilySans": "Inter, -apple-system, system-ui, "Segoe UI", Roboto, sans-serif",
  "fontSize2xl": 28,
  "fontSize3xl": 36,
  "fontSizeLg": 18,
  "fontSizeMd": 16,
  "fontSizeSm": 14,
  "fontSizeXl": 22,
  "fontSizeXs": 12,
  "fontWeightBold": "700",
  "fontWeightMedium": "500",
  "fontWeightRegular": "400",
  "fontWeightSemibold": "600",
  "lineHeightLoose": 1.6,
  "lineHeightNormal": 1.4,
  "lineHeightTight": 1.2,
  "radiusLg": 16,
  "radiusMd": 10,
  "radiusPill": 999,
  "radiusSm": 6,
  "space2xl": 32,
  "space3xl": 48,
  "space4xl": 64,
  "spaceLg": 16,
  "spaceMd": 12,
  "spaceSm": 8,
  "spaceXl": 24,
  "spaceXs": 4,
}
`;

exports[`RN theme output > rnLightTheme matches snapshot 1`] = `
{
  "colorAccentDefault": "#2898d8",
  "colorAccentOnAccent": "#ffffff",
  "colorBorderStrong": "rgba(0,0,0,0.12)",
  "colorBorderSubtle": "rgba(0,0,0,0.07)",
  "colorHeroBgEnd": "#3ab0e8",
  "colorHeroBgStart": "#1870b8",
  "colorHeroSparkline": "rgba(255,255,255,0.75)",
  "colorHeroTopAccent": "transparent",
  "colorIncomeDefault": "#4868b8",
  "colorStatusDanger": "#b83030",
  "colorStatusSuccess": "#2a8c58",
  "colorStatusWarning": "#b07020",
  "colorSurfaceBase": "#edf1f7",
  "colorSurfaceMid": "#f4f6fa",
  "colorSurfaceOverlay": "#e8ecf2",
  "colorSurfaceRaised": "#ffffff",
  "colorTextMuted": "rgba(24,32,46,0.38)",
  "colorTextPrimary": "#18202e",
  "colorTextSecondary": "rgba(24,32,46,0.55)",
  "fontFamilySans": "Inter, -apple-system, system-ui, "Segoe UI", Roboto, sans-serif",
  "fontSize2xl": 28,
  "fontSize3xl": 36,
  "fontSizeLg": 18,
  "fontSizeMd": 16,
  "fontSizeSm": 14,
  "fontSizeXl": 22,
  "fontSizeXs": 12,
  "fontWeightBold": "700",
  "fontWeightMedium": "500",
  "fontWeightRegular": "400",
  "fontWeightSemibold": "600",
  "lineHeightLoose": 1.6,
  "lineHeightNormal": 1.4,
  "lineHeightTight": 1.2,
  "radiusLg": 16,
  "radiusMd": 10,
  "radiusPill": 999,
  "radiusSm": 6,
  "space2xl": 32,
  "space3xl": 48,
  "space4xl": 64,
  "spaceLg": 16,
  "spaceMd": 12,
  "spaceSm": 8,
  "spaceXl": 24,
  "spaceXs": 4,
}
`;
